# molecular-tools

./: .gitignore  AUTHOR  BUGS  ChangeLog  DOCUMENTATION.md  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  autotoolize.sh  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libs/AnalyticalBders/: Bders.ipynb  Makefile.am  Makefile.in  derBbend.f90  derBdihe.f90  derBstre.f90
src/: autotoolize.sh
src/bonded_info/: Makefile  Makefile.am  Makefile.in  calcRMS_bonded  calcRMS_bonded.f90  calcRMS_bonded_v4.f90  config.status  configure  configure.ac  geom_param_list  geom_param_list.f90  geom_param_list_v4.f90  get_com.f90  max_dist_to_center.f90
src/build_top/: Makefile  Makefile.am  Makefile.in  build_top.f90  build_top_v4.f90  config.status  configure  configure.ac
src/build_top/autom4te.cache/: output.0  traces.0  traces.1
src/calc_duschinsky/: LHA_optimizer.f90  Makefile.am  Makefile.in  NewtonRaphson_step.f90  cartesian_duschinsky.f90  generate_connetivity.f90  generate_internals.f90  get_DeltaX.f90  internal_duschinsky.f90  internal_duschinsky_prjCrt.f90  rotate_disp.f90  state2hessian.f90  substract_disps.f90  transpose_dusch.f90  vertical2adiabatic.f90
src/cube_tools/: Makefile.am  Makefile.in  charges_pot_onmol.f90  charges_pot_onmol_MD.f90  charges_pot_onmol_MD_old.f90  charges_potential.f90  density_3D.f90  solvent_potential.f90
src/fcclasses_tools/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  get_adiabaticE  get_adiabaticE.f90  prepare_fcinput  prepare_fcinput_v4.f90  read_dip_fchk  read_dip_fchk_v4.f90  read_grad-hess_symm.f90  read_state_fchk  read_state_fchk_v3.f90  read_state_hess  read_state_hess.f90  read_state_log_v4.f90
src/fcclasses_tools_dev/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  read_state_hess  read_state_hess.f90
src/file_management/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  fchk2gro.f90  fchk2gro_trj.f90  fchk2gro_v4.1.f90  fchk2gro_v4.f90  filter_fchk.f90  gen_oniom_v4.f90  get_gscan.f90  get_reordering.f90  get_symatoms.f90  mod_topology.f90  numderNM_dipoles.f90  numderX.f90  numder_dipoles.f90  prepare_numder_coms.f90  read_irc.f90  read_opt.f90  read_scan.f90  reform_fchk.f90  rmsd_fit.f90  rotate_cube_header.f90
src/file_management/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/gen_oniom/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  gen_oniom.f90  gen_oniom_v4.1.f90  gen_oniom_v4.f90  gen_oniom_v5.f90  sizes.f90
src/internal_duschisky/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  internal_duschinski_v13_v4.f90  internal_duschinsky  internal_duschinsky.f90  parameters.f90  vertical2adiabatic.f90  verticalPCCP.f90  zmat2internalset.f90  zmat2modredundant.f90
src/isotopes/: Makefile.am  get_isotolopogues.f90
src/joyce_tools/: Makefile.am  Makefile.in  configure.ac  jpp.f90  modify_fchk.f90
src/modules/: .internal_SR8_v4.f90.kate-swp  .xyz_manage_v4.f90.kate-swp  Makefile.am  Makefile.in  MatrixMod.f90  alerts.f90  allocation.f90  atomic_geom.f90  atomic_geom_v2.f90  atomic_geom_v2.f90~  chem_io.f90  constants.f90  constants_mod.f90  fcc_manage.f90  ff_build.f90  ff_build_module_v4.f90  gamess_manage.f90  gaussian_fchk_manage_core.f90  gaussian_fchk_manage_v4.f90  gaussian_fchk_manage_v4.f90~  gaussian_manage_lowlevel.f90  gaussian_manage_v4.f90  gaussian_manage_v4.f90~  gaussian_manage_v5.f90  gaussian_manage_vNoTypes.f90  generic_io.f90  generic_io_molec.f90  get_git_version.sh  gro_manage_geno.f90  gro_manage_v4.f90  internal.f90  internal_SR8_v4.0.1.f90  internal_SR8_v4.0.1.f90~  internal_SR8_v4.0.2.f90  internal_SR8_v4.f90  internal_SR8_v4.f90~  internal_SR9_v4.f90  internal_SR9_v4_NvibAdd.f90  internal_SR_v8.4_corrected.f90  internal_coord.f90  (+45 more)
src/modules/alt_tracks/: ff_build_module_v2.1.f90  structure_types_v2_ALLOC.f90
src/modules/unsupported_modules/: gaussian_fchk_analysis.f90  geom_meter_v2.f90
src/modules_external/: Makefile.in
src/normal_modes/: COPYING  Makefile  Makefile.am  Makefile.in  cartesian2internal_forces.f90  check_derivatives.f90  config.status  configure  configure.ac  freq2fc.f90  gen_Lder_numx.f90  harmonic_distrib.f90  internal_numder_analysis_v4.0.1.f90  new_internal_check.f90  normal_modes_Cartesian.f90  normal_modes_Cartesian1b_v4.0.1.f90  normal_modes_Cartesian1b_v4.f90  normal_modes_analysis.f90  normal_modes_animation.f90  normal_modes_internal.f90  normal_modes_internal_prjCrt.f90  normal_modes_internal_prjInt.f90  normal_modes_internal_v4.0.1.1.f90  normal_modes_internal_v4.0.1.2.f90  normal_modes_internal_v4.0.1.f90  normal_modes_internal_v4.0.2.f90  normal_modes_internal_v4.f90  numder_L.f90  numder_Lint.f90  numder_fc.f90  project_gradient_on_nm_cartesian.f90  project_gradient_on_nm_internal.f90  project_normal_modes_internal.f90  vibrations_cart.f90
src/normal_modes/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/normal_modes/test/: anthracene_TD_freq_nosym.fchk
src/vibrations/: Makefile  Makefile.am  Makefile.in  check_diag  check_diag.f90  check_diag_v4.f90  config.status  configure  configure.ac  read_state_hess
src/wf_analysis/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  contribMO  contribMO.f90  contribMO_v4.f90  get_MO_energy.f90  get_NTO_coef  get_NTO_coef.f90  ovelap_from_coeff.f90  overlapMO.f90  read_C_from_log.f90  read_C_from_molden.f90  read_S_from_log.f90
