SUBDIRS =                        \
          libs/AnalyticalBders   \
          src/modules            \
          src/isotopes              

#          src/build_top          \
#          src/vibrations         \
#          src/gen_oniom          \
#          src/wf_analysis        \
#          src/joyce_tools

# EXTRA_DIST = libs/AnalyticalBders/libbders.a

