SUBDIRS =                        \
          libs/AnalyticalBders   \
          src/modules            \
          src/calc_duschinsky    \
          src/normal_modes       \
          src/file_management    \
          src/gen_oniom          \
          src/bonded_info        \
          src/wf_analysis        \
          src/build_top          \
          src/joyce_tools

#          src/vibrations         \
#          src/joyce_tools

# EXTRA_DIST = libs/AnalyticalBders/libbders.a

